# ai-translate

./: .gitignore  README.en.md  README.md  index.html  package.json  pnpm-lock.yaml  popup.html  vite.config.js
scripts/: generate_icon.py
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  lib.rs  main.rs  shortcut.rs  translation.rs
